8359235: C1 compilation fails with "assert(is_single_stack() && !is_virtual()) failed: type check"

Reviewed-by: thartmann, dlong