src/hotspot/cpu/x86/c1_LIRGenerator_x86.cpp
@@ -961,7 +961,7 @@ void LIRGenerator::do_update_CRC32(Intrinsic* x) {
       CallingConvention* cc = frame_map()->c_calling_convention(&signature);
       const LIR_Opr result_reg = result_register_for(x->type());
 
-      LIR_Opr addr = new_pointer_register();
+      LIR_Opr addr = new_register(T_ADDRESS);
       __ leal(LIR_OprFact::address(a), addr);
 
       crc.load_item_force(cc->at(0));
@@ -1100,10 +1100,10 @@ void LIRGenerator::do_vectorizedMismatch(Intrinsic* x) {
   CallingConvention* cc = frame_map()->c_calling_convention(&signature);
   const LIR_Opr result_reg = result_register_for(x->type());
 
-  LIR_Opr ptr_addr_a = new_pointer_register();
+  LIR_Opr ptr_addr_a = new_register(T_ADDRESS);
   __ leal(LIR_OprFact::address(addr_a), ptr_addr_a);
 
-  LIR_Opr ptr_addr_b = new_pointer_register();
+  LIR_Opr ptr_addr_b = new_register(T_ADDRESS);
   __ leal(LIR_OprFact::address(addr_b), ptr_addr_b);
 
   __ move(ptr_addr_a, cc->at(0));
